@@ -67,13 +67,13 @@
 
 计算机取出指令后，就要根据指令进行相应的逻辑运算，实现指令的功能。JVM作为虚拟机，也需要支持对Java字节码的运算能力
 
-
-
-## JDK tools
+# JDK tools
 
 JDK自带的命令，可以查看Java程序的进程信息，线程运行信息，GC信息，系统启动的配置信息等等
 
 ### JPS
+
+
 
 打印正在运行的Java进程PID
 
@@ -88,7 +88,9 @@ option :
 10346 DeadLockDemo
 ```
 
-# Jstack
+### Jstack
+
+
 
 打印进程中线程的状态，可排查死锁，线程等待等问题 
 
@@ -258,8 +260,6 @@ Java stack information for the threads listed above:
 Found 1 deadlock.
 ```
 
-
-
 ### Jmap
 
 ### 
@@ -276,7 +276,84 @@ Found 1 deadlock.
 
 
 
+# 垃圾回收（Garbage Collect）
 
+### 内存区域的分配
+
+* 程序计数器
+
+  
+
+* 虚拟机栈
+
+* 方法区
+
+* 本地方法栈
+
+* 虚拟机堆
+
+### 确定被回收对象
+
+* 引用计数法
+
+  
+
+* 可达性分析
+
+  
+
+### 垃圾收集器
+
+1. 串行收集器使用一个线程来执行所有的垃圾收集工作，这使得它相对高效，因为线程之间没有通信开销。它最适合于单处理器机器，因为它不能利用多处理器硬件的优势，尽管它在多处理器上对于具有小数据集(最多约100 MB)的应用程序很有用。在某些硬件和操作系统配置上，串行收集器是默认选择的，或者可以通过选项-XX:+UseSerialGC显式启用
+
+2. 并行收集器(也称为吞吐量收集器)并行执行小的收集，这可以显著减少垃圾收集开销。它适用于在多处理器或多线程硬件上运行的具有大中型数据集的应用程序。在某些硬件和操作系统配置上，并行收集器是默认选择的，或者可以通过选项-XX:+UseParallelGC显式启用。
+
+   并行压缩是允许并行收集器并行执行主要收集的特性。如果没有并行压缩，主要的收集将使用单个线程执行，这将极大地限制可伸缩性。如果指定了选项-XX:+UseParallelGC，则默认情况下启用并行压缩。关闭它的选项是-XX:-UseParallelOldGC。
+
+3. 以并发为主的收集器并发地执行其大部分工作(例如，当应用程序仍在运行时)，以保持垃圾收集暂停的时间较短。它是为具有大中型数据集的应用程序设计的，在这些应用程序中，响应时间比总体吞吐量更重要，因为用于最小化暂停的技术可能会降低应用程序性能。Java HotSpot VM提供了两个并发收集器之间的选择;[查看并发收集器](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/concurrent.html#mostly_concurrent)。使用选项-XX:+UseConcMarkSweepGC启用CMS收集器，或-XX:+UseG1GC启用G1收集器。
+
+   
+
+### SerialGC
+
+
+
+### ParallelGC
+
+参考资料：https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/parallel.html
+
+并行收集器(这里也称为吞吐量收集器)是一种类似于串行收集器的分代收集器;主要的区别是使用多个线程来加速垃圾收集。并行收集器是通过命令行选项-XX:+UseParallelGC启用的。默认情况下，使用此选项，次要和主要收集都将并行执行，以进一步减少垃圾收集开销。
+
+
+
+### ConcMarkSweepGC
+
+参考资料：https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/cms.html#concurrent_mark_sweep_cms_collector
+
+
+
+
+
+### G1GC
+
+参考资料：https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/g1_gc.html#garbage_first_garbage_collection
+
+垃圾优先(G1)垃圾收集器是一种服务器风格的垃圾收集器，针对具有大内存的多处理器机器。它尝试以高概率满足垃圾收集(GC)暂停时间目标，同时实现高吞吐量。整堆操作(例如全局标记)与应用程序线程并发执行。这可以防止中断与堆或实时数据大小成比例。
+
+
+
+堆被划分为一组大小相同的堆区域，每个区域都是连续的虚拟内存范围。G1执行一个并发全局标记阶段，以确定堆中对象的活性。标记阶段完成后，G1知道哪些区域大部分是空的。它首先收集这些区域，这通常会产生大量的空闲空间。这就是为什么这种垃圾收集方法被称为垃圾优先的原因。顾名思义，G1将其收集和压缩活动集中在堆中可能充满可回收对象(即垃圾)的区域。G1使用一个暂停预测模型来满足用户定义的暂停时间目标，并根据指定的暂停时间目标选择要收集的区域数
+
+### 垃圾回收算法的选择
+
+参考资料：https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/collectors.html#sthref28
+
+除非应用程序有相当严格的暂停时间要求，否则首先运行应用程序并允许VM选择收集器。如果需要，调整堆大小以提高性能。如果性能仍然不能满足您的目标，那么使用以下指导原则作为选择收集器的起点：
+
+* 如果应用程序的数据集很小(最多大约100 MB)，那么使用选项-XX:+UseSerialGC选择串行收集器。
+* 如果应用程序运行在单个处理器上，并且没有暂停时间要求，那么让VM选择收集器，或者选择串行收集器，选项-XX:+UseSerialGC。
+* 如果(a)应用程序性能峰值是首要优先级，并且(b)没有暂停时间要求，或者可以接受1秒或更长时间的暂停，那么让VM选择收集器，或者选择并行收集器，使用-XX:+UseParallelGC。
+* 如果响应时间比总体吞吐量更重要，并且垃圾收集暂停时间必须保持在大约1秒以下，那么选择具有-XX:+UseConcMarkSweepGC或-XX:+UseG1GC的并发收集器。
 
 
 
